deploy: 0d43040ec0a39ae5a078a1b75b5776fea08a6819

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/space-tourism/icon.png" />
+    <link rel="icon" type="image/png" href="/infinite-trivia/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Infinite Trivia</title>
-    <script type="module" crossorigin src="/space-tourism/index-8302bbfa.js"></script>
+    <script type="module" crossorigin src="/infinite-trivia/index-8302bbfa.js"></script>
   </head>
   <body>
     <div id="root"></div>
