--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/infinite-trivia/icon.png" />
+    <link rel="icon" type="image/x-icon" href="/infinite-trivia/icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Infinite Trivia</title>
-    <script type="module" crossorigin src="/infinite-trivia/index-4a8b0414.js"></script>
+    <script type="module" crossorigin src="/infinite-trivia/index-5ddd41e4.js"></script>
   </head>
   <body>
     <div id="root"></div>
